# cat-detector

./: .gitignore  Procfile  binding.gyp
cpp/src/: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  cd-config.h.in  main.cpp  ret_str.cpp
nodejs/: main.js  package-lock.json  package.json
python/: main.py
